data/derived/comb/progs/unify/prog7184.ml.out
Characters 187-188:
  else rest' = t
               ^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
